<resources>
    <string name="app_name">LiveDataApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="tvText">1</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnClear">Clear</string>
</resources>