<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:id="@+id/btnRed"
            android:backgroundTint="@color/red" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:id="@+id/btnBlue"
            android:layout_margin="10dp"
            android:backgroundTint="@color/blue" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:id="@+id/btnGreen"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:backgroundTint="@color/green" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPlus"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:id="@+id/btnPlus"
            android:backgroundTint="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnMinus"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMinus"
            android:id="@+id/btnMinus"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:backgroundTint="@color/green"
            app:layout_constraintStart_toEndOf="@id/btnPlus"
            app:layout_constraintEnd_toStartOf="@id/btnClear"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnClear"
            android:id="@+id/btnClear"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:backgroundTint="@color/green"
            app:layout_constraintStart_toEndOf="@id/btnMinus"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/fragment"
        android:name="com.lovejeet.livedataapp.LiveDataFragment"/>

</LinearLayout>
</layout>